--- a/index.html
+++ b/index.html
@@ -370,19 +370,7 @@
 	<body>
 		<!-- Start Screen -->
 		<div class="start-screen" id="startScreen">
-			<h1>🐧 Penguin Glider</h1>
-			<div class="game-instructions">
-				<p><strong>Welcome to Arctic Adventure!</strong></p>
-				<p>🎮 <strong>Controls:</strong></p>
-				<p>• Use <strong>ARROW KEYS</strong> or <strong>WASD</strong> to move</p>
-				<p>• On mobile: Use <strong>TOUCH CONTROLS</strong></p>
-				<p>• <strong>SPACE</strong> or <strong>UP ARROW</strong> to jump/glide</p>
-				<br />
-				<p>🎯 <strong>Goal:</strong></p>
-				<p>Glide from iceberg to iceberg and collect fish for points! 🐟</p>
-				<p>Don't fall into the icy water! ❄️</p>
-			</div>
-			<button class="play-button" onclick="startGame()">🎮 PLAY GAME</button>
+
 		</div>
 
 		<canvas id="gameCanvas"></canvas>
@@ -445,5 +433,6 @@
 				gameOver.style.display = "none";
 			}
 		</script>
+		<script src="start.js"></script>
 	</body>
 </html>
