--- a/index.html
+++ b/index.html
@@ -376,11 +376,7 @@
 		<canvas id="gameCanvas"></canvas>
 
 		<!-- UI Overlay -->
-		<div class="ui-overlay">
-			<div class="top-ui">
-				<div class="score">Score: <span id="score">0</span></div>
-			</div>
-		</div>
+		
 
 		<!-- Mobile Touch Controls -->
 		<div class="mobile-controls" id="mobileControls">
@@ -433,6 +429,7 @@
 				gameOver.style.display = "none";
 			}
 		</script>
+		<script src="timer.js"></script>
 		<script src="start.js"></script>
 	</body>
 </html>
