Implement level completion system with win screen and progress tracking

--- a/index.html
+++ b/index.html
@@ -369,14 +369,11 @@
 	</head>
 	<body>
 		<!-- Start Screen -->
-		<div class="start-screen" id="startScreen">
-
-		</div>
+		<div class="start-screen" id="startScreen"></div>
 
 		<canvas id="gameCanvas"></canvas>
 
 		<!-- UI Overlay -->
-		
 
 		<!-- Mobile Touch Controls -->
 		<div class="mobile-controls" id="mobileControls">
@@ -391,6 +388,15 @@
 			<p>The penguin fell into the icy water! ❄️</p>
 			<p>Final Score: <span id="finalScore">0</span></p>
 			<button class="restart-btn" onclick="restartGame()">Try Again</button>
+		</div>
+
+		<!-- Win Screen Modal -->
+		<div class="game-over" id="winScreen">
+			<h2>🎉 Level Complete! 🎉</h2>
+			<p>You successfully reached the end with enough fish! 🐟</p>
+			<p>Final Score: <span id="winScore">0</span> fish</p>
+			<p>Time Remaining: <span id="winTime">0:00</span></p>
+			<button class="restart-btn" onclick="restartGame()">Play Again</button>
 		</div>
 
 		<script src="game.js"></script>
@@ -411,7 +417,9 @@
 			// Restart game directly without showing start screen
 			function restartGame() {
 				const gameOver = document.getElementById("gameOver");
+				const winScreen = document.getElementById("winScreen");
 				gameOver.style.display = "none";
+				winScreen.style.display = "none";
 
 				if (game) {
 					game.restart();
