Add background music system and integrate with game controls

--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
 				gameOver.style.display = "none";
 			}
 		</script>
+		<script src="background-music.js"></script>
 		<script src="timer.js"></script>
 		<script src="start.js"></script>
 	</body>
