Add win screen enhancements with bravo image and styled Play Again button

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 				display: none;
 				z-index: 999;
 				pointer-events: auto;
+				color: #ffffff;
 				
 				/* Dark overlay background */
 				background: rgba(0, 0, 0, 0.75);
